# agaric-store — persistence + read/query layer for the layered-workspace split (#2621).
#
# Wave S1 establishes the crate with the pure-leaf `cancellation` module
# (cooperative cancellation tokens; std + tokio only — no DB, no other app
# module). Later waves add the DB core (`op`, `op_log`, `db`) with a
# store-local `.sqlx` offline cache + a 2nd `sqlx prepare` CI lane, then the
# query modules. The `agaric` crate depends on this via a path dep and
# re-exports each module (`pub use agaric_store::cancellation;` …) so existing
# `crate::cancellation::…` paths keep resolving unchanged during the transition.
[package]
name = "agaric-store"
version = "0.1.0"
edition = "2024"
# Keep in lockstep with ../Cargo.toml (the app crate) + rust-toolchain.toml.
rust-version = "1.95.0"
license = "GPL-3.0-or-later"
publish = false

[features]
# `test-util` exposes the `test_support` module (temp-file WAL `test_pool` +
# `insert_block` + space helpers) to downstream crates' test builds. The
# `agaric-engine` loro tests enable it to get a migrated pool in place of the
# app's `init_pool` (#2621, wave E1). Empty deps: the module only touches
# already-present store deps (sqlx, tempfile is a dev-dep — see note below).
test-util = ["dep:tempfile"]

[dependencies]
# Versions/features mirror the app crate's `[dependencies]` so cargo's feature
# unification keeps a single build of each crate across the workspace.
# `agaric-core` — `op` references `error::AppError`, `hash`, and the `ulid`
# newtypes. Path dep pinned with a version (cargo-deny wildcard ban).
agaric-core = { path = "../agaric-core", version = "0.1.0" }
# `op` — op-type / op-payload (de)serialization + `specta::Type` derives.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "=2.0.0-rc.25", features = ["derive", "chrono"] }
# `cancellation` uses `tokio::sync::watch` only.
tokio = { version = "1", features = ["sync"] }
# `db` — pool structs wrap sqlx pools; the acquire/begin helpers use sqlx types.
# Version/features mirror the app crate exactly for cargo feature-unification.
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
# `db::now_ms` uses `chrono::Utc::now().timestamp_millis()`.
chrono = { version = "0.4.44", features = ["serde"] }
# `space::SpaceId` validates via `ulid::Ulid::from_str`. Version mirrors the
# app crate + agaric-core.
ulid = "2.0.1"
# `db` acquire helpers use `tracing::warn!`.
tracing = { version = "0.1.44", features = ["attributes"] }
# `pagination`'s keyset cursor codec (`Cursor`) base64-encodes the opaque
# cursor payload. Version mirrors the app crate exactly (#2621, wave S4b).
base64 = "0.22.1"
# `tag_query` uses `FxHashSet` for tag-leaf de-duplication. Version mirrors
# the app crate's `rustc-hash` dep (#2621, wave S4b).
rustc-hash = "2.1.2"
# `tag_query::resolve` fans out prefix-resolve lookups via `try_join_all`.
# Version/features mirror the app crate exactly (#2621, wave S4b).
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
# `cache/mod.rs` compiles the three ULID-token regexes (`ULID_LINK_RE`,
# `TAG_REF_RE`, `PAGE_LINK_RE`) at first use via `LazyLock<Regex>` — prod code,
# so `regex` is a regular dependency (#2621, wave S4c). Version mirrors the app
# crate's `regex = "1"`.
regex = "1"
# `test_support` (temp-file WAL `test_pool`) needs `tempfile` for its `TempDir`.
# Optional + gated by the `test-util` feature so downstream test builds
# (agaric-engine) can compile it; the store's own `cargo test` reaches the same
# module via the `[dev-dependencies]` `tempfile` below (#2621, wave E1).
tempfile = { version = "3.27.0", optional = true }

[dev-dependencies]
# The moved `cancellation` unit tests use `#[tokio::test]`, `tokio::spawn`,
# the multi-thread flavor, and `tokio::time::timeout`.
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time", "sync"] }
# `op`'s tests: `insta` snapshot assertions + `proptest` property tests.
# Versions/features mirror the app crate's `[dev-dependencies]`.
insta = { version = "1.47.0", features = ["yaml", "redactions"] }
proptest = "1.11.0"
# Re-declare agaric-core with `test-util` so the `*::test_id` newtype
# constructors (otherwise `#[cfg(test)]`-only) are available to op's test
# build — same pattern the app crate uses (#2621).
agaric-core = { path = "../agaric-core", version = "0.1.0", features = ["test-util"] }
# op_log's DB tests build a temp-file-backed migrated pool (the store-local
# stand-in for the app's `init_pool`). Version mirrors the app crate.
tempfile = "3.27.0"
# Two op_log `origin` tests capture `tracing::warn!` output via an in-process
# subscriber. Version/features mirror the app crate's `tracing-subscriber` dep.
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

# Mirror the app crate's lint posture so clippy/rustc behave identically under
# CI (same pattern as the `agaric-core` / `agaric-diagnostics` members).
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_possible_wrap = "warn"
fallible_impl_from = "deny"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
manual_let_else = "warn"
large_futures = "warn"
default_trait_access = "warn"
