# agaric-sync ŌĆö peer-to-peer sync layer for the layered-workspace split
# (#2621).
#
# Sync-B establishes the crate with the three dependency-free leaf modules
# (`device`, `sync_constants`, `foreground`) peeled off the app crate. Later
# waves (Sync-D) fold in the mutually-recursive net/protocol/daemon/files
# cluster + `snapshot`, at which point the crate gains its own `.sqlx` offline
# cache (migrations symlink + committed cache + a 4th `sqlx prepare` CI lane,
# mirroring `agaric-store` / `agaric-engine`). The `agaric` crate depends on
# this via a version-pinned path dep and re-exports each module
# (`pub use agaric_sync::{device, foreground, sync_constants};`) so existing
# `crate::device::ŌĆ”` / `crate::foreground::ŌĆ”` / `crate::sync_constants::ŌĆ”`
# paths keep resolving unchanged during the transition.
[package]
name = "agaric-sync"
version = "0.1.0"
edition = "2024"
# Keep in lockstep with ../Cargo.toml (the app crate) + rust-toolchain.toml.
rust-version = "1.95.0"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
# Versions/features mirror the app crate's `[dependencies]` so cargo's feature
# unification keeps a single build of each crate across the workspace.
# `agaric-core` ŌĆö `device` returns `error::AppError`. Path dep pinned with a
# version (cargo-deny wildcard ban).
agaric-core = { path = "../agaric-core", version = "0.1.0" }
# `device` parses / mints the persisted device UUID. Version/features mirror the
# app crate exactly for cargo feature-unification.
uuid = { version = "1.23.2", features = ["v4"] }
# `foreground`'s `LifecycleHooks` wakes background loops via `tokio::sync::Notify`.
# Only the `sync` feature is needed here; the app relies on workspace feature
# unification to pull the rest, but it is enabled explicitly so the crate builds
# standalone.
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
# `device`'s tests build config-dir fixtures under a `TempDir`. Version mirrors
# the app crate's `[dev-dependencies]`.
tempfile = "3.27.0"
# `foreground`'s tests drive the `LifecycleHooks` wake/notify pair under
# `#[tokio::test]`, which needs the macro + a runtime. Enabled here (not just via
# workspace feature unification) so the crate's tests build standalone. Version/
# features mirror the app crate's `[dev-dependencies]`.
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

# Mirror the app crate's lint posture so clippy/rustc behave identically under
# CI (same pattern as the `agaric-core` / `agaric-store` / `agaric-engine`
# members).
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_possible_wrap = "warn"
fallible_impl_from = "deny"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
manual_let_else = "warn"
large_futures = "warn"
default_trait_access = "warn"
