# cargo-fuzz crate (#650) — coverage-guided fuzzing for the byte-level
# parsers that accept ARBITRARY input (peer snapshot bytes, OS-supplied
# deep-link URLs). The structured proptest harnesses only generate VALID
# shapes; libFuzzer's coverage-guided mutation is the right tool for the
# raw-byte boundary.
#
# This is its OWN workspace (the `[workspace]` table below) so cargo-fuzz's
# nightly/sanitizer build never contaminates the pinned-stable main build
# and the parent `src-tauri` workspace doesn't try to compile it on every
# `cargo build`. It depends on the parent crate as a path dependency, so it
# only sees that crate's `pub` API surface.
[package]
name = "agaric-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

# cargo-machete scans a crate's `src/` for usage, but our targets live in
# `fuzz_targets/*.rs` (non-standard [[bin]] paths it doesn't trace), so it
# false-reports `agaric` and `agaric-store` as unused. The crate genuinely
# depends on both — the targets `use agaric_lib::{snapshot::decode_snapshot,
# deeplink::parse_deep_link, import::parse_logseq_markdown,
# link_metadata::{parse_title, parse_description, parse_favicon,
# detect_auth_required}}` and `use agaric_store::fts::{strip::strip_for_fts_with_maps,
# sanitize_fts_query}` (#2945) and the crate fails to build without them.
# Ignore the false positives.
[package.metadata.cargo-machete]
ignored = ["agaric", "agaric-store"]

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.agaric]
path = ".."

# #2945 — `fts_strip` fuzz target drives `agaric_store::fts::{strip::
# strip_for_fts_with_maps, sanitize_fts_query}` directly. Path/version style
# mirrors the `agaric` dep above and the parent `src-tauri/Cargo.toml` entry.
[dependencies.agaric-store]
path = "../agaric-store"
version = "0.1.0"

# Excludes the fuzz crate from the parent workspace; cargo-fuzz builds it
# standalone under nightly with sanitizer instrumentation.
[workspace]

[profile.release]
debug = 1

# `cargo fuzz` discovers targets from these [[bin]] entries. `test = false`
# / `doc = false` keep `cargo test`/`cargo doc` from trying to build the
# libFuzzer harness (which needs the nightly `-Z sanitizer` flags injected
# by `cargo fuzz`).
[[bin]]
name = "snapshot_decode"
path = "fuzz_targets/snapshot_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "deeplink_parse"
path = "fuzz_targets/deeplink_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "import_parse"
path = "fuzz_targets/import_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fts_strip"
path = "fuzz_targets/fts_strip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "html_parse"
path = "fuzz_targets/html_parse.rs"
test = false
doc = false
bench = false
